[project]
name = "dieseldusel"
version = "0.1.0"
description = "A Telegram bot that analyzes car dashboard and fuel receipt images to track fuel consumption and costs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.6",
]
